--- a/configure.in
+++ b/configure.in
@@ -318,22 +318,24 @@ case "$m_cv_cxx_opernames" in yes)
 	esac
 esac
 
-dnl check if size_t is different from unsigned long - this is used to define
-dnl UIdType in a way which would allow it to compile everywhere
-AC_CACHE_CHECK([if size_t is different from unsigned long],
-    m_cv_size_t_not_ulong,
-    AC_TRY_COMPILE([#include <stddef.h>],
-	[
-	    struct Foo { void foo(size_t); void foo(unsigned long); };
-	],
-	m_cv_size_t_not_ulong=yes,
-	m_cv_size_t_not_ulong=no
-    )
-)
-
-if test "$m_cv_size_t_not_ulong" != "yes"; then
-    AC_DEFINE(UIDTYPE_IS_UINT)
-fi
+dnl this is not used any more (with wxWin 2.3.x) as it now conveniently
+dnl defines wxSIZE_T_IS_U(INT|LONG) for us
+dnl ### dnl check if size_t is different from unsigned long - this is used to
+dnl ### dnl define UIdType in a way which would allow it to compile everywhere
+dnl ### AC_CACHE_CHECK([if size_t is different from unsigned long],
+dnl ###     m_cv_size_t_not_ulong,
+dnl ###     AC_TRY_COMPILE([#include <stddef.h>],
+dnl ### 	[
+dnl ### 	    struct Foo { void foo(size_t); void foo(unsigned long); };
+dnl ### 	],
+dnl ### 	m_cv_size_t_not_ulong=yes,
+dnl ### 	m_cv_size_t_not_ulong=no
+dnl ###     )
+dnl ### )
+dnl ### 
+dnl ### if test "$m_cv_size_t_not_ulong" != "yes"; then
+dnl ###     AC_DEFINE(UIDTYPE_IS_UINT)
+dnl ### fi
 
 dnl Various other commands needed
 dnl =============================
