fixed spurious warning for --without-python

--- a/configure.in
+++ b/configure.in
@@ -699,6 +699,10 @@ static|Static|STATIC|dynamic|Dynamic|DYNAMIC|1)
 	)
 	;;
 
+0)
+	USE_PYTHON=0
+	;;
+
 *)
 	USE_PYTHON=0
 	AC_MSG_WARN(Unrecognized --with-python option value.)
