added multipart icon for Windows build

--- a/res/M.rc
+++ b/res/M.rc
@@ -47,6 +47,7 @@ binary		ICON	"binary.ico"
 dvi		ICON	"dvi.ico"
 image		ICON	"image.ico"
 message		ICON	"message.ico"
+multipart	ICON	"multipart.ico"
 postscript	ICON	"postscript.ico"
 text		ICON	"text.ico"
 video		ICON	"video.ico"
