--- a/configure.in
+++ b/configure.in
@@ -70,6 +70,9 @@ M_OVERRIDES(nls,i18n support,USE_I18N,1,
 M_OVERRIDES(python,Python scripting,USE_PYTHON,static,
 --with-python=xxx       one of none/static/dynamic)
 
+M_OVERRIDES(swig,whether we should use SWIG,USE_SWIG,1,
+--without-swig          don't use swig even if it is available)
+
 M_OVERRIDES(experimental,experimental code,USE_EXPERIMENTAL,0,
 --with-experimental     compile experimental code)
 
@@ -716,14 +719,14 @@ esac
 
 dnl now check for the Python lib but only if linking statically
 case "$USE_PYTHON" in
-dynamic|Dynamic|DYNAMIC|1)
+dynamic|Dynamic|DYNAMIC)
 	dnl FIXME
-	AC_MSG_WARN(Sorry, dynamic Python linking doesn't work currently)
+	AC_MSG_WARN([Sorry, dynamic Python linking doesn't work currently])
 	USE_PYTHON=0
 	dnl AC_DEFINE(USE_PYTHON_DYNAMIC)
 	;;
 
-static|Static|STATIC)
+static|Static|STATIC|1)
 	M_CHECK_MYLIB(python$PYTHON_VER, main,
 	[ \
 	    $prefix/lib \
@@ -776,13 +779,15 @@ case "$USE_PYTHON" in
 
 *)	AC_DEFINE(USE_PYTHON)
 	MAKE_USE_PYTHON="USE_PYTHON=yes"
-	AC_PATH_PROG(SWIG,swig)
-	case "$SWIG" in '')
-	    AC_MSG_WARN([cannot find SWIG - will try to use intermediate files
-		    to compile Python support.
-		    If possible, please install SWIG.])
-	    ;;
-	esac
+	if test "x$USE_SWIG" = "x1"; then
+	    AC_PATH_PROG(SWIG,swig)
+	    case "$SWIG" in '')
+		AC_MSG_WARN([cannot find SWIG - will try to use intermediate files
+			    to compile Python support.
+			    If possible, please install SWIG.])
+		;;
+	    esac
+	fi
 	;;
 esac
 AC_SUBST(MAKE_USE_PYTHON)
