compile cclient without optimizations in debug mode

--- a/configure.in
+++ b/configure.in
@@ -131,18 +131,30 @@ AC_DEFINE_UNQUOTED(M_TOP_BUILDDIR, "$BUILDDIR")
 dnl instead of invoking subsidary configures, we accumulate the flags
 dnl here for some third-party sources, since they would otherwise have
 dnl to repeat much of the same logic just to set a few compiler flags.
+
 IMAP_CPPFLAGS="${CPPFLAGS}"
+if test "$USE_OPT" != "1"; then
+    IMAP_CPPFLAGS="${IMAP_CPPFLAGS} -O0"
+fi
 IMAP_CFLAGS="${CFLAGS}"
 IMAP_CXXFLAGS="${CXXFLAGS}"
-AC_SUBST(IMAP_CPPFLAGS) AC_SUBST(IMAP_CFLAGS) AC_SUBST(IMAP_CXXFLAGS)
+AC_SUBST(IMAP_CPPFLAGS)
+AC_SUBST(IMAP_CFLAGS)
+AC_SUBST(IMAP_CXXFLAGS)
+
 CFACE_CPPFLAGS="${CPPFLAGS}"
 CFACE_CFLAGS="${CFLAGS}"
 CFACE_CXXFLAGS="${CXXFLAGS}"
-AC_SUBST(CFACE_CPPFLAGS) AC_SUBST(CFACE_CFLAGS) AC_SUBST(CFACE_CXXFLAGS)
+AC_SUBST(CFACE_CPPFLAGS)
+AC_SUBST(CFACE_CFLAGS)
+AC_SUBST(CFACE_CXXFLAGS)
+
 LIBMAL_CPPFLAGS="${CPPFLAGS}"
 LIBMAL_CFLAGS="${CFLAGS}"
 LIBMAL_CXXFLAGS="${CXXFLAGS}"
-AC_SUBST(LIBMAL_CPPFLAGS) AC_SUBST(LIBMAL_CFLAGS) AC_SUBST(LIBMAL_CXXFLAGS)
+AC_SUBST(LIBMAL_CPPFLAGS)
+AC_SUBST(LIBMAL_CFLAGS)
+AC_SUBST(LIBMAL_CXXFLAGS)
 
 dnl C-compiler checks
 dnl =================
@@ -610,7 +622,6 @@ fi
 
 AC_SUBST(MAKE_USESSL)
 AC_SUBST(IMAP_SPECIALAUTHENTICATORS)
-AC_SUBST(IMAP_CPPFLAGS)
 
 dnl --------------------------------------------------------------------------
 dnl check for other libraries
