1. M builds with SSL support under Win32 2. added new mail bitmap for Win32 3. changed MailFolder interactivity stuff completely once again: now it's    broken but I think I know how to _really_ fix it, finally

--- a/res/M.rc
+++ b/res/M.rc
@@ -103,6 +103,7 @@ work		BITMAP "work.bmp"
 // Options dialog notebook image list (32x32)
 ident		BITMAP "ident.bmp"
 network		BITMAP "network.bmp"
+newmail		BITMAP "newmail.bmp"
 compose		BITMAP "compose.bmp"
 folders		BITMAP "folders.bmp"
 #ifdef USE_PYTHON
