--- a/makeopts.in
+++ b/makeopts.in
@@ -106,13 +106,13 @@ DOCDIR = $(DATADIR)/doc
 LD_RUN_PATH=$(DATADIR)/$(CANONICAL_HOST)/lib
 MODULEDIR=$(DATADIR)/$(CANONICAL_HOST)/modules
 
-LINK = $(CXX) #-Wl-r$(LD_RUN_PATH) #-Wl-export-dynamic 
+LINK = $(CXX)
 
 CFLAGS   = @CFLAGS@
 CXXFLAGS = @CXXFLAGS@
 # for the python code:
 CXXFLAGS_RELAXED = @CXXFLAGS_RELAXED@
-LDFLAGS = @LDFLAGS@
+LDFLAGS = @LDFLAGS@ @MODULELDFLAGS@
 
 LIBS=$(MODULES_LIBS) @LIBS@ 
 LIBS_STATIC=$(MODULES_LIBS) @LIBS_STATIC@ 
