--- a/configure.in
+++ b/configure.in
@@ -780,7 +780,7 @@ esac
 
 case "$USE_PYTHON" in
 0)	MAKE_USE_PYTHON=''
-	AC_MSG_WARN(Building M without Python leads to reduced functionality!)
+	AC_MSG_WARN([Mahogany will be built without embedded Python interpreter])
 	PYTHON_LIBS=''
 	;;
 
