--- a/configure.in
+++ b/configure.in
@@ -207,34 +207,37 @@ dnl   defines GXX with yes if using gxx, else empty
 dnl   defines CXXFLAGS
 AC_PROG_CXX
 
-dnl disable support for exceptions if the compiler is g++ and
-dnl new enough to support it.
-case "$GXX" in yes)
-	AC_CACHE_CHECK(whether ${CXX-g++} accepts -fno-exceptions,
-		m_cv_gxx_exceptions,
-		[echo 'void f(){}' >conftest.cc
-		case "`${CXX-g++} -fno-exceptions -c conftest.cc 2>&1`" in
-		'')	m_cv_gxx_exceptions=yes ;;
-		*)	m_cv_gxx_exceptions=no ;;
-		esac
-		rm -f conftest*])
-	case "$m_cv_gxx_exceptions" in yes)
-		CXXFLAGS="$CXXFLAGS -fno-exceptions"
-	esac
-
-	dnl the same for RTTI - we don't use it neither
-	AC_CACHE_CHECK(whether ${CXX-g++} accepts -fno-rtti,
-		m_cv_gxx_rtti,
-		[echo 'void f(){}' >conftest.cc
-		case "`${CXX-g++} -fno-rtti -c conftest.cc 2>&1`" in
-		'')	m_cv_gxx_rtti=yes ;;
-		*)	m_cv_gxx_rtti=no ;;
-		esac
-		rm -f conftest*])
-	case "$m_cv_gxx_rtti" in yes)
-		CXXFLAGS="$CXXFLAGS -fno-rtti"
-	esac
-esac
+dnl disabling this because wx-config now outputs -fno-exceptions -fno-rtti
+dnl for us itself if they are supported
+dnl
+dnl dnl disable support for exceptions if the compiler is g++ and
+dnl dnl new enough to support it.
+dnl case "$GXX" in yes)
+dnl 	AC_CACHE_CHECK(whether ${CXX-g++} accepts -fno-exceptions,
+dnl 		m_cv_gxx_exceptions,
+dnl 		[echo 'void f(){}' >conftest.cc
+dnl 		case "`${CXX-g++} -fno-exceptions -c conftest.cc 2>&1`" in
+dnl 		'')	m_cv_gxx_exceptions=yes ;;
+dnl 		*)	m_cv_gxx_exceptions=no ;;
+dnl 		esac
+dnl 		rm -f conftest*])
+dnl 	case "$m_cv_gxx_exceptions" in yes)
+dnl 		CXXFLAGS="$CXXFLAGS -fno-exceptions"
+dnl 	esac
+dnl 
+dnl 	dnl the same for RTTI - we don't use it neither
+dnl 	AC_CACHE_CHECK(whether ${CXX-g++} accepts -fno-rtti,
+dnl 		m_cv_gxx_rtti,
+dnl 		[echo 'void f(){}' >conftest.cc
+dnl 		case "`${CXX-g++} -fno-rtti -c conftest.cc 2>&1`" in
+dnl 		'')	m_cv_gxx_rtti=yes ;;
+dnl 		*)	m_cv_gxx_rtti=no ;;
+dnl 		esac
+dnl 		rm -f conftest*])
+dnl 	case "$m_cv_gxx_rtti" in yes)
+dnl 		CXXFLAGS="$CXXFLAGS -fno-rtti"
+dnl 	esac
+dnl esac
 
 dnl check whether the C++ supports the new logical operator names
 dnl c-client library uses some of them as field names
@@ -990,14 +993,6 @@ dynamic|Dynamic|DYNAMIC)
 	m_cv_USE_MODULES=dynamic
 	AC_DEFINE(USE_MODULES)
 	MAKE_USE_MODULES="USE_MODULES=dynamic"
-
-	dnl under some systems we have to use -Wl,-export-dynamic or the
-	dnl modules don't find symbols in M
-	case "$OSTYPE" in
-	    linux* | Linux* | freebsd* | FreeBSD*)
-		    MODULELDFLAGS="-export-dynamic"
-		    ;;
-	esac
 	;;
 static|Static|STATIC)
 	m_cv_USE_MODULES=static
@@ -1024,6 +1019,17 @@ auto|Auto|AUTO|1)
 *)
 	AC_MSG_ERROR(Set --with-modules= to one of static/dynamic/none)
 esac
+
+if test "$m_cv_USE_MODULES" = "dynamic"; then
+    dnl under some systems we have to use -Wl,-export-dynamic or the
+    dnl modules don't find symbols in M
+    case "$OSTYPE" in
+	linux* | Linux* | freebsd* | FreeBSD*)
+		MODULELDFLAGS="-export-dynamic"
+		;;
+    esac
+fi
+
 AC_SUBST(MAKE_USE_MODULES)
 AC_SUBST(MODULELDFLAGS)
 
