--- a/configure.in
+++ b/configure.in
@@ -67,7 +67,7 @@ M_OVERRIDES(strict,strict compiler options,USE_STRICT,0,
 M_OVERRIDES(nls,i18n support,USE_I18N,1,
 --disable-nls           no internationalization support)
 
-M_OVERRIDES(python,Python scripting,USE_PYTHON,static,
+M_OVERRIDES(python,Python scripting,USE_PYTHON,none,
 --with-python=xxx       one of none/static/dynamic)
 
 M_OVERRIDES(swig,whether we should use SWIG,USE_SWIG,1,
