--- a/include/config.h.in
+++ b/include/config.h.in
@@ -96,6 +96,9 @@
 /** Define this to use built-in i18n support */
 #undef USE_I18N
 
+/** Define this to build M with dialup support */
+#undef USE_DIALUP
+
 /** This define contains the installation prefix where Mahogany
     is installed.
 */
