--- a/makeopts.in
+++ b/makeopts.in
@@ -115,6 +115,7 @@ CXXFLAGS_RELAXED = @CXXFLAGS_RELAXED@
 LDFLAGS = @LDFLAGS@ @MODULELDFLAGS@
 
 LIBS=$(MODULES_LIBS) @LIBS@ 
-LIBS_STATIC=$(MODULES_LIBS) @LIBS_STATIC@ 
-GUI_LIBS=@WX_LDFLAGS@
+GUI_LIBS=@WX_LIBS@
+GUI_LIBS_QUARTSTATIC=@GUI_LIBS_QUARTSTATIC@
+GUI_LIBS_SEMISTATIC=@GUI_LIBS_SEMISTATIC@
 GUI_LIBS_STATIC=@GUI_LIBS_STATIC@
